cmake_minimum_required(VERSION 2.8)
project( take-display-image )
find_package( OpenCV REQUIRED )
message(STATUS "OpenCV_INCLUDE_DIRS = ${OpenCV_INCLUDE_DIRS}")
message(STATUS "OpenCV_LIBS = ${OpenCV_LIBS}")
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( take-display-image TakeDisplayImage.cpp )
target_link_libraries( take-display-image ${OpenCV_LIBS} )
